# Elections

./: .gitignore  2nd_round_lula_vs_renan_santos-140720261102.xlsx  AGENTS.md  Base_nova.xlsx  ESPECIFICACAO_MESTRE_IMPLEMENTACAO.md  ESTUDO_METODOLOGICO_AGREGADOR.md  HANDOFF.md  PROJECT_CONTEXT.md  PROMPT_HANDOFF_CHAT_TRABALHO.md  README.md  ROTEIRO_NOVO_AGREGADOR.md  pyproject.toml
ARQUIVOS_ANTIGOS/: Base_nova_limpa_antes_atlas_1T_2026-07-20.xlsx  LEIA-ME.md
DOCUMENTACAO/: DIAGNOSTICO_E_MATRIZ_MIGRACAO_LEGADO.md  ESPECIFICACAO_MESTRE_IMPLEMENTACAO.md  ESTUDO_METODOLOGICO_AGREGADOR.md  MANUAL_EXECUCAO_AGREGADOR.md  PROMPT_HANDOFF_CHAT_TRABALHO.md  RELATORIO_MONITOR_TSE.md  ROTEIRO_NOVO_AGREGADOR.md
ENTREGA_FINAL/: Base_nova_limpa.xlsx  POLPRES1.xls
ENTREGA_FINAL/AGREGADOR_2022/: Base_nova_limpa.xlsx  MODELO A.PY
ENTREGA_FINAL/MONITOR_TSE/: README.md  pyproject.toml  run_monitor_tse.py
ENTREGA_FINAL/MONITOR_TSE/DOCUMENTACAO/: RELATORIO_MONITOR_TSE.md
ENTREGA_FINAL/MONITOR_TSE/config/: monitor_tse.yaml
ENTREGA_FINAL/MONITOR_TSE/scripts/windows/: executar_monitor_tse.bat  instalar_tarefa.ps1  remover_tarefa.ps1
ENTREGA_FINAL/MONITOR_TSE/src/monitor_tse/: cli.py  db.py
ENTREGA_FINAL/MONITOR_TSE/tests/monitor_tse/: test_monitor.py
Pesquisas eleitorais nacionais - Executivo Federal - 2025 até atual/: 1st_round_-_with_flavio-140720261102.xlsx  controle_pesquisas_eleitorais_nacionais.xlsx
codigos e planilhas legado/: 2tLulaxFlavio.PY  avgeoic.PY  avliq2series.PY
config/: agregador.yaml  backtest.yaml  monitor_tse.yaml
tests/: test_core.py
(+119 files in other folders)
