[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agregador-pesquisas"
version = "0.1.0"
description = "Agregador auditável de pesquisas políticas — Modelo A legado"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
  "numpy>=2.0",
  "openpyxl>=3.1",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
  "filelock>=3.16",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
