[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor-pesquisas-tse"
version = "0.1.0"
description = "Monitor auditável de pesquisas eleitorais registradas no TSE"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1",
  "PyYAML>=6.0",
  "filelock>=3.16",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
